<resources>
    <string name="app_name">Connecto</string>
    <string name="log_in">Log In</string>
    <string name="connecto_definition">Connecto is a Messenger Application allows you to Share and Store Data Online.</string>
    <string name="join_connecto_community">Join Connecto Community</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_won_t_spam_you_we_value_your_privacy">We won\'t spam you. We value your privacy.</string>
    <string name="or">OR</string>
    <string name="welcome_again">Welcome Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_messenger_drawer">MessengerActivityDrawer</string>
    <string name="tab_text_1">Chats</string>
    <string name="tab_text_2">Calls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="calls">Calls</string>
    <string name="title_activity_notes">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="vault_notes">Vault Notes</string>
    <string name="all_notes">All Notes</string>
    <string name="create_notes_with_connecto">Create Notes with Connecto</string>
    <string name="title_activity_single_note">SingleNoteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit_button">Submit Button</string>
    <string name="submit">Submit</string>
    <string name="link">Link</string>
    <string name="connect_o">Connect-O</string>
    <string name="verify">Verify</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_notes_to_vault">Add Notes to Vault.</string>
    <string name="username">Username</string>
    <string name="link_your_mobile_with_email_here">Link your Mobile with Email Here.</string>
</resources>