<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue_bg"
    android:orientation="vertical"
    tools:context=".screen.LinkMobileEmailActivity">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_link_24" />

        <TextView
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/connect_o"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/welcome_again"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/connecto_definition"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_edittext_bg"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingVertical="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_white"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/round_edittext_bg"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingVertical="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_white"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:autofillHints=""
        android:background="@drawable/round_edittext_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingVertical="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_white"
        android:textSize="14sp"
        android:visibility="visible" />



    <Button
        android:background="@drawable/round_button_bg"
        android:id="@+id/link_btn"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:onClick="link_now"
        android:textAllCaps="true"
        android:text="@string/link"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:text="@string/link_your_mobile_with_email_here"
        android:textColor="#60FFFFFF"
        android:textSize="12sp" />

</LinearLayout>
